--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sequelize": "^5.21.3"
   },
   "devDependencies": {
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "prettier": "^1.18.2"
   }
 }
