--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "author": "Remulo Costa <remulo.costa@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "nodemon src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "dev:debug": "nodemon --inspect src/server.js",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -14,7 +22,15 @@
     "sequelize": "^5.21.3"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-standard-jsx": "^8.1.0",
+    "eslint-plugin-import": "^2.19.1",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
+    "prettier": "^1.18.2",
     "sequelize-cli": "^5.5.1",
-    "prettier": "^1.18.2"
+    "sqlite3": "^4.1.1",
+    "supertest": "^4.0.2"
   }
 }
