--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.17.0",
     "sequelize": "^5.21.3"
   },
