--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "factory-girl": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.17.0",
     "sequelize": "^5.21.3"
@@ -28,6 +29,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-standard-jsx": "^8.1.0",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-react": "^7.17.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
